...
            android:layout_marginStart="@dimen/linearlayout_dialog_resolve_edit_title_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_resolve_edit_title_margin_top"
            android:layout_marginBottom="@dimen/linearlayout_dialog_resolve_edit_title_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/label_dialog_resolve_edit_title" />

...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_match_host_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_match_host"
                android:text="@string/label_dialog_resolve_edit_match_host" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_match_host"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_match_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_match_port"
                android:text="@string/label_dialog_resolve_edit_match_port" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_match_port"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_connect_to_host_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_connect_to_host"
                android:text="@string/label_dialog_resolve_edit_connect_to_host" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_connect_to_host"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_connect_to_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_connect_to_port"
                android:text="@string/label_dialog_resolve_edit_connect_to_port" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_connect_to_port"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_resolve_edit_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_resolve_edit_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_resolve_edit_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_resolve_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_resolve_edit_cancel"
...
