<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_resolve_edit_ok">@android:string/ok</string>
    <string name="label_dialog_resolve_edit_cancel">@android:string/cancel</string>
    <string name="label_dialog_resolve_edit_title">Connection configuration</string>
    <string name="label_dialog_resolve_edit_match_host">Match host</string>
    <string name="label_dialog_resolve_edit_match_port">Match port</string>
    <string name="label_dialog_resolve_edit_connect_to_host">Connect-to host</string>
    <string name="label_dialog_resolve_edit_connect_to_port">Connect-to port</string>
    <integer name="edittext_dialog_resolve_edit_match_host_max_lines">2</integer>
    <integer name="edittext_dialog_resolve_edit_connect_to_host_max_lines">2</integer>
    <integer name="edittext_dialog_resolve_edit_match_port_max_length">7</integer>
    <integer name="edittext_dialog_resolve_edit_connect_to_port_max_length">7</integer>
</resources>
