...
    <string name="string_successful">successful</string>
    <string name="string_not_successful">failed</string>
    <string name="string_not_executed">not executed</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="string_none">none</string>
    <string name="string_not_set">not set</string>
    <string name="string_open">Open</string>
    <string name="string_sec">sec</string>
    <string name="string_msec">msec</string>
    <string name="string_active">Active</string>
    <string name="string_inactive">Inactive</string>
    <string name="string_default">default</string>
...
